fix: make sidebar scrollable on small height screens

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -577,6 +577,11 @@ a {
     border-radius: 4px !important;
 }
 
+/* Hidden scroll for a sidebar */
+.layout-sider-scroll::-webkit-scrollbar {
+    display: none;
+}
+
 .homeCard {
     /*backdrop-filter: blur(12px) saturate(200%);*/
     /*-webkit-backdrop-filter: blur(12px) saturate(200%);*/
